--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ footer a {
           <img src="emh.gif" />
         </div>
         <h1 id="teks2" class="scale0 itim" style="font-size: 19px">
-          ciee, whose birthday is today 💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br />
+          ciee, yang ultahhh💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br />
             ⇒ ⇒ ⇒
         </h1>
       </div>
@@ -606,7 +606,7 @@ footer a {
   </script>
 
 <footer>
-  <a href="https://himang.my.id">Himang.my.id</a>
+  <a href="https://t.me/aboutdiex">cin</a>
 </footer>
 </body>
 
