--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ footer a {
 
   <!-- Efek blur untuk latar belakang -->
   <div id="bodyblur">
-    <img src="bg.jpg" id="wallpaper" />
+    <img src="IMG-20240625-WA0046.jpg" id="wallpaper" />
   </div>
 
   <!-- Slider Swiper -->
